// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker Base DOM Snapshot 1`] = `
<div
  className="slds-color-picker test_class_name"
>
  <div
    className="slds-color-picker__summary"
  >
    <span
      className="slds-color-picker__summary-label"
      htmlFor="color-picker-summary-input-SkaneSrim"
    />
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <button
        className="slds-button slds-button_icon-more slds-color-picker__summary-button"
        disabled={false}
        id="Skga3lrrj7"
        onClick={[Function]}
        onFocus={null}
        onMouseEnter={null}
        onMouseLeave={null}
        tabIndex="0"
        type="button"
      >
        <span
          className="slds-swatch"
          style={
            Object {
              "backgroundColor": "#e3abec",
              "border": "1px solid #cccccc",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            #e3abec
          </span>
        </span>
        <svg
          aria-hidden="true"
          className="slds-button__icon slds-button__icon_x-small slds-m-left_xx-small"
        >
          <use />
        </svg>
      </button>
    </div>
    <div
      className="slds-form-element slds-color-picker__summary-input slds-align-top"
    >
      <div
        className="slds-form-element__control"
      >
        <input
          aria-describedby="color-picker-summary-error-SkaneSrim"
          className="slds-input"
          id="color-picker-summary-input-SkaneSrim"
          maxLength="7"
          onChange={[Function]}
          type="text"
          value="#e3abec"
        />
      </div>
    </div>
    
  </div>
</div>
`;

exports[`ColorPicker Custom Variant 1`] = `
<div
  className="slds-color-picker"
>
  <div
    className="slds-color-picker__summary"
  >
    <span
      className="slds-color-picker__summary-label"
      htmlFor="color-picker-summary-input-rJmeahgBSi7"
    />
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <button
        className="slds-button slds-button_icon-more slds-color-picker__summary-button"
        disabled={false}
        id="BJEgT2eSSsX"
        onClick={[Function]}
        onFocus={null}
        onMouseEnter={null}
        onMouseLeave={null}
        tabIndex="0"
        type="button"
      >
        <span
          className="slds-swatch"
          style={
            Object {
              "backgroundColor": "#e3abec",
              "border": "1px solid #cccccc",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            #e3abec
          </span>
        </span>
        <svg
          aria-hidden="true"
          className="slds-button__icon slds-button__icon_x-small slds-m-left_xx-small"
        >
          <use />
        </svg>
      </button>
    </div>
    <div
      className="slds-form-element slds-color-picker__summary-input slds-align-top"
    >
      <div
        className="slds-form-element__control"
      >
        <input
          aria-describedby="color-picker-summary-error-rJmeahgBSi7"
          className="slds-input"
          id="color-picker-summary-input-rJmeahgBSi7"
          maxLength="7"
          onChange={[Function]}
          type="text"
          value="#e3abec"
        />
      </div>
    </div>
    
  </div>
</div>
`;

exports[`ColorPicker Error Text 1`] = `
<div
  className="slds-color-picker"
>
  <div
    className="slds-color-picker__summary"
  >
    <span
      className="slds-color-picker__summary-label"
      htmlFor="color-picker-summary-input-BJgxp2xSrj7"
    />
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <button
        className="slds-button slds-button_icon-more slds-color-picker__summary-button"
        disabled={false}
        id="SJWga3lrHj7"
        onClick={[Function]}
        onFocus={null}
        onMouseEnter={null}
        onMouseLeave={null}
        tabIndex="0"
        type="button"
      >
        <span
          className="slds-swatch"
          style={
            Object {
              "backgroundColor": "#e3abec",
              "border": "1px solid #cccccc",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            #e3abec
          </span>
        </span>
        <svg
          aria-hidden="true"
          className="slds-button__icon slds-button__icon_x-small slds-m-left_xx-small"
        >
          <use />
        </svg>
      </button>
    </div>
    <div
      className="slds-form-element slds-color-picker__summary-input slds-align-top slds-has-error"
    >
      <div
        className="slds-form-element__control"
      >
        <input
          aria-describedby="color-picker-summary-error-BJgxp2xSrj7"
          className="slds-input"
          id="color-picker-summary-input-BJgxp2xSrj7"
          maxLength="7"
          onChange={[Function]}
          type="text"
          value="#e3abec"
        />
      </div>
    </div>
    <p
      className="slds-form-error"
      id="color-picker-summary-error-BJgxp2xSrj7"
    >
      Outer input in error mode
    </p>
  </div>
</div>
`;

exports[`ColorPicker Menu Disabled DOM Snapshot 1`] = `
<div
  className="slds-color-picker"
>
  <div
    className="slds-color-picker__summary"
  >
    <span
      className="slds-color-picker__summary-label"
      htmlFor="color-picker-summary-input-Hy6p2eHBsX"
    />
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <button
        className="slds-button slds-button_icon-more slds-color-picker__summary-button"
        disabled={true}
        id="rkAT2xBHsm"
        onClick={[Function]}
        onFocus={null}
        onMouseEnter={null}
        onMouseLeave={null}
        tabIndex="0"
        type="button"
      >
        <span
          className="slds-swatch"
          style={
            Object {
              "backgroundColor": "#e3abec",
              "border": "1px solid #cccccc",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            #e3abec
          </span>
        </span>
        <svg
          aria-hidden="true"
          className="slds-button__icon slds-button__icon_x-small slds-m-left_xx-small"
        >
          <use />
        </svg>
      </button>
    </div>
    <div
      className="slds-form-element slds-color-picker__summary-input slds-align-top"
    >
      <div
        className="slds-form-element__control"
      >
        <input
          aria-describedby="color-picker-summary-error-Hy6p2eHBsX"
          className="slds-input"
          disabled={true}
          id="color-picker-summary-input-Hy6p2eHBsX"
          maxLength="7"
          onChange={[Function]}
          type="text"
          value="#e3abec"
        />
      </div>
    </div>
    
  </div>
</div>
`;

exports[`ColorPicker Menu Open DOM Snapshot 1`] = `
<div
  className="slds-color-picker"
>
  <div
    className="slds-color-picker__summary"
  >
    <span
      className="slds-color-picker__summary-label"
      htmlFor="color-picker-summary-input-SkGp2erHo7"
    />
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <button
        className="slds-button slds-button_icon-more slds-color-picker__summary-button"
        disabled={false}
        id="SJXThlrBjm"
        onClick={[Function]}
        onFocus={null}
        onMouseEnter={null}
        onMouseLeave={null}
        tabIndex="0"
        type="button"
      >
        <span
          className="slds-swatch"
          style={
            Object {
              "backgroundColor": "#e3abec",
              "border": "1px solid #cccccc",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            #e3abec
          </span>
        </span>
        <svg
          aria-hidden="true"
          className="slds-button__icon slds-button__icon_x-small slds-m-left_xx-small"
        >
          <use />
        </svg>
      </button>
      <div
        aria-describedby="SJXThlrBjm-dialog-body"
        aria-labelledby="SJXThlrBjm-dialog-heading"
        className="absolute-positioned slds-nubbin_top-left ignore-react-onclickoutside slds-popover slds-color-picker__selector test_class_name_menu"
        id="SJXThlrBjm-popover"
        onKeyDown={[Function]}
        onMouseEnter={null}
        onMouseLeave={null}
        role="popover"
        style={
          Object {
            "outline": 0,
            "pointerEvents": "none",
            "position": "absolute",
          }
        }
        tabIndex="-1"
      >
        <button
          className="slds-button slds-button_icon slds-button slds-button_icon-small slds-float_right slds-popover__close slds-button_icon"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="slds-button__icon slds-button__icon_small"
          >
            <use />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Close dialog
          </span>
        </button>
        <div
          className="slds-popover__body"
          id="SJXThlrBjm-dialog-body"
        >
          <div
            className="slds-tabs_default"
            data-tabs={true}
            id="HyNaherBoQ"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <ul
              className="slds-tabs_default__nav"
              id="HyNaherBoQ-slds-tabs__nav"
              role="tablist"
            >
              <li
                aria-controls="HyNaherBoQ-slds-tabs_panel-0"
                aria-selected="true"
                className="slds-text-title_caps slds-active slds-tabs_default__item"
                id="HyNaherBoQ-slds-tabs_tab-0"
                role="tab"
                tabIndex="0"
                title="Default"
              >
                <a
                  className="slds-active slds-tabs_default__link"
                  href="javascript:void(0);"
                  role="presentation"
                  tabIndex="-1"
                >
                  Default
                </a>
              </li>
              <li
                aria-controls="HyNaherBoQ-slds-tabs_panel-1"
                aria-selected="false"
                className="slds-text-title_caps slds-tabs_default__item"
                id="HyNaherBoQ-slds-tabs_tab-1"
                role="tab"
                tabIndex={null}
                title="Custom"
              >
                <a
                  className="slds-tabs_default__link"
                  href="javascript:void(0);"
                  role="presentation"
                  tabIndex="-1"
                >
                  Custom
                </a>
              </li>
            </ul>
            <div
              aria-labelledby="HyNaherBoQ-slds-tabs_tab-0"
              className="slds-show slds-tabs_default__content"
              id="HyNaherBoQ-slds-tabs_panel-0"
              role="tabpanel"
            >
              <ul
                className="slds-color-picker__swatches"
                role="listbox"
              >
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#e3abec",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #e3abec
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#c2dbf7",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #c2dbf7
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#9fd6ff",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #9fd6ff
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#9de7da",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #9de7da
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#9df0c0",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #9df0c0
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#fff099",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #fff099
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#fed49a",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #fed49a
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#d073e0",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #d073e0
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#86baf3",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #86baf3
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#5ebbff",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #5ebbff
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#44d8be",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #44d8be
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#3be282",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #3be282
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#ffe654",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #ffe654
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#ffb758",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #ffb758
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#bd35bd",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #bd35bd
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#5779c1",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #5779c1
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#5679c0",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #5679c0
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#00aea9",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #00aea9
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#3cba4c",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #3cba4c
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#f5bc25",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #f5bc25
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#f99221",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #f99221
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#580d8c",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #580d8c
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#001970",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #001970
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#0a2399",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #0a2399
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#0b7477",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #0b7477
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#0b6b50",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #0b6b50
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#b67e11",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #b67e11
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  className="slds-color-picker__swatch"
                  role="presentation"
                >
                  <a
                    className="slds-color-picker__swatch-trigger"
                    onClick={[Function]}
                    role="option"
                    tabIndex={0}
                  >
                    <span
                      className="slds-swatch"
                      style={
                        Object {
                          "backgroundColor": "#b85d0d",
                          "border": "1px solid #cccccc",
                        }
                      }
                    >
                      <span
                        className="slds-assistive-text"
                      >
                        #b85d0d
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <div
              aria-labelledby="HyNaherBoQ-slds-tabs_tab-1"
              className="slds-hide slds-tabs_default__content"
              id="HyNaherBoQ-slds-tabs_panel-1"
              role="tabpanel"
            >
              <div
                className="slds-color-picker__custom"
              >
                <div>
                  <p
                    className="slds-assistive-text"
                    id="color-picker-instructions-SkGp2erHo7"
                  >
                    Use arrow keys to select a saturation and brightness, on an x and y axis.
                  </p>
                  <div
                    className="slds-color-picker__custom-range"
                    onClick={[Function]}
                    role="presentation"
                    style={
                      Object {
                        "background": "hsl(291.6923076923077, 100%, 50%)",
                      }
                    }
                  >
                    <a
                      aria-atomic="true"
                      aria-describedby="color-picker-instructions-SkGp2erHo7"
                      aria-live="assertive"
                      className="slds-color-picker__range-indicator"
                      onKeyDown={[Function]}
                      role="button"
                      style={
                        Object {
                          "bottom": "92.54901960784314%",
                          "left": "27.54237288135594%",
                        }
                      }
                      tabIndex={0}
                    />
                  </div>
                  <div
                    className="slds-color-picker__hue-and-preview"
                  >
                    <label
                      className="slds-assistive-text"
                      htmlFor="color-picker-input-range-SkGp2erHo7"
                    >
                      Select Hue
                    </label>
                    <input
                      className="slds-color-picker__hue-slider"
                      id="color-picker-input-range-SkGp2erHo7"
                      max="360"
                      min="0"
                      onChange={[Function]}
                      type="range"
                      value={291.6923076923077}
                    />
                    <fieldset
                      className="slds-form-element"
                    >
                      <legend
                        className="slds-form-element__legend slds-form-element__label slds-assistive-text"
                      >
                        Toggle Transparency
                      </legend>
                      <div
                        className="slds-form-element__control"
                      >
                        <div
                          className="slds-radio_button-group"
                          style={
                            Object {
                              "border": "none",
                              "borderRadius": "unset",
                            }
                          }
                        >
                          <span
                            className=""
                          >
                            <input
                              checked={true}
                              id="S1LThgrHsX"
                              name="HyHa2gSHoX"
                              onChange={[Function]}
                              style={
                                Object {
                                  "height": 0,
                                  "visibility": "hidden",
                                  "width": 0,
                                }
                              }
                              type="radio"
                              value="#e3abec"
                            />
                            <label
                              className="slds-radio_button__label"
                              htmlFor="S1LThgrHsX"
                              style={
                                Object {
                                  "border": "1px",
                                }
                              }
                            >
                              <span
                                className="slds-radio_faux"
                              >
                                <span
                                  className="slds-swatch"
                                  style={
                                    Object {
                                      "backgroundColor": "#e3abec",
                                      "border": "1px solid #9e9e9e",
                                      "boxShadow": "rgb(117, 112, 112) 1px 1px 1px",
                                      "marginRight": "2px",
                                    }
                                  }
                                >
                                  <span
                                    className="slds-assistive-text"
                                  >
                                    #e3abec
                                  </span>
                                </span>
                              </span>
                            </label>
                          </span>
                          <span
                            className=""
                          >
                            <input
                              checked={false}
                              id="H1Da2grSjX"
                              name="HyHa2gSHoX"
                              onChange={[Function]}
                              style={
                                Object {
                                  "height": 0,
                                  "visibility": "hidden",
                                  "width": 0,
                                }
                              }
                              type="radio"
                              value=""
                            />
                            <label
                              className="slds-radio_button__label"
                              htmlFor="H1Da2grSjX"
                              style={
                                Object {
                                  "border": "1px",
                                }
                              }
                            >
                              <span
                                className="slds-radio_faux"
                              >
                                <span
                                  className="slds-swatch"
                                  style={
                                    Object {
                                      "backgroundColor": "",
                                      "backgroundImage": "linear-gradient(-45deg, white 47%, #870500 0, #870500 53%, white 0)",
                                      "border": "1px solid #9e9e9e",
                                      "marginRight": "2px",
                                    }
                                  }
                                >
                                  <span
                                    className="slds-assistive-text"
                                  >
                                    
                                  </span>
                                </span>
                              </span>
                            </label>
                          </span>
                        </div>
                      </div>
                    </fieldset>
                  </div>
                </div>
                <div
                  className="slds-color-picker__custom-inputs"
                >
                  <div
                    className="slds-form-element slds-color-picker__input-custom-hex"
                  >
                    <label
                      className="slds-form-element__label"
                      htmlFor="color-picker-input-hex-SkGp2erHo7"
                    >
                      Hex
                    </label>
                    <div
                      className="slds-form-element__control"
                    >
                      <input
                        aria-describedby="color-picker-custom-error-SkGp2erHo7"
                        className="slds-input"
                        id="color-picker-input-hex-SkGp2erHo7"
                        maxLength="7"
                        onChange={[Function]}
                        type="text"
                        value="#e3abec"
                      />
                    </div>
                  </div>
                  <div
                    className="slds-form-element slds-color-picker__input-custom-r"
                  >
                    <label
                      className="slds-form-element__label"
                      htmlFor="color-picker-input-r-SkGp2erHo7"
                    >
                      R
                    </label>
                    <div
                      className="slds-form-element__control"
                    >
                      <input
                        aria-describedby="color-picker-custom-error-SkGp2erHo7"
                        className="slds-input"
                        id="color-picker-input-r-SkGp2erHo7"
                        maxLength="3"
                        onChange={[Function]}
                        type="text"
                        value="227"
                      />
                    </div>
                  </div>
                  <div
                    className="slds-form-element slds-color-picker__input-custom-g"
                  >
                    <label
                      className="slds-form-element__label"
                      htmlFor="color-picker-input-g-SkGp2erHo7"
                    >
                      G
                    </label>
                    <div
                      className="slds-form-element__control"
                    >
                      <input
                        aria-describedby="color-picker-custom-error-SkGp2erHo7"
                        className="slds-input"
                        id="color-picker-input-g-SkGp2erHo7"
                        maxLength="3"
                        onChange={[Function]}
                        type="text"
                        value="171"
                      />
                    </div>
                  </div>
                  <div
                    className="slds-form-element slds-color-picker__input-custom-b"
                  >
                    <label
                      className="slds-form-element__label"
                      htmlFor="color-picker-input-b-SkGp2erHo7"
                    >
                      B
                    </label>
                    <div
                      className="slds-form-element__control"
                    >
                      <input
                        aria-describedby="color-picker-custom-error-SkGp2erHo7"
                        className="slds-input"
                        id="color-picker-input-b-SkGp2erHo7"
                        maxLength="3"
                        onChange={[Function]}
                        type="text"
                        value="236"
                      />
                    </div>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <footer
          className="slds-popover__footer"
        >
          <div
            className="slds-color-picker__selector-footer"
          >
            <button
              className="slds-button slds-button_neutral slds-color-picker__selector-cancel"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="slds-button slds-button_brand slds-color-picker__selector-submit"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Done
            </button>
          </div>
        </footer>
      </div>
    </div>
    <div
      className="slds-form-element slds-color-picker__summary-input slds-align-top"
    >
      <div
        className="slds-form-element__control"
      >
        <input
          aria-describedby="color-picker-summary-error-SkGp2erHo7"
          className="slds-input"
          id="color-picker-summary-input-SkGp2erHo7"
          maxLength="7"
          onChange={[Function]}
          type="text"
          value="#e3abec"
        />
      </div>
    </div>
    
  </div>
</div>
`;

exports[`ColorPicker Swatches Variant 1`] = `
<div
  className="slds-color-picker"
>
  <div
    className="slds-color-picker__summary"
  >
    <span
      className="slds-color-picker__summary-label"
      htmlFor="color-picker-summary-input-ByIlaneHSiQ"
    />
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <button
        className="slds-button slds-button_icon-more slds-color-picker__summary-button"
        disabled={false}
        id="SkPg63eBSoX"
        onClick={[Function]}
        onFocus={null}
        onMouseEnter={null}
        onMouseLeave={null}
        tabIndex="0"
        type="button"
      >
        <span
          className="slds-swatch"
          style={
            Object {
              "backgroundColor": "#e3abec",
              "border": "1px solid #cccccc",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            #e3abec
          </span>
        </span>
        <svg
          aria-hidden="true"
          className="slds-button__icon slds-button__icon_x-small slds-m-left_xx-small"
        >
          <use />
        </svg>
      </button>
    </div>
    <div
      className="slds-form-element slds-color-picker__summary-input slds-align-top"
    >
      <div
        className="slds-form-element__control"
      >
        <input
          aria-describedby="color-picker-summary-error-ByIlaneHSiQ"
          className="slds-input"
          id="color-picker-summary-input-ByIlaneHSiQ"
          maxLength="7"
          onChange={[Function]}
          type="text"
          value="#e3abec"
        />
      </div>
    </div>
    
  </div>
</div>
`;
